# riscv32-sim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.rb  decoder.h  disasm.asm  functions.cpp  functions.h  instruction.cpp  instruction.h  ir.ll  kernel.cpp  kernel.h  main.cpp  memory.cpp  memory.h  readelf.cpp  readelf.h
compile/: main.cpp  main.h  run.rb
sim/inc/: backend.h  converter.h  instruction.h  macro.h  memory.h  parser.h  readelf.h
sim/src/: backend.cpp  converter.cpp  functions.cpp  instruction.cpp  kernel.cpp  main.cpp  memory.cpp  parser.cpp  readelf.cpp
src/: functions.cpp  instruction.cpp  instruction.h  readelf.cpp
tests/8_queens/: 8_queens.out
